[package]
name = "i3-auto-layout"
description = "Automatic, optimal tiling for i3wm"
version = "0.3.2"
authors = ["Gregory <gregory.mkv@gmail.com>"]
edition = "2018"
homepage = "https://github.com/chmln/i3-auto-layout"
repository = "https://github.com/chmln/i3-auto-layout"
readme = "README.md"
license = "MIT"

[dependencies]
tokio-i3ipc = "0.16.0"
tokio = { version = "1.37.0", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0.83"
log = "0.4.21"
flexi_logger = { version = "0.28.0", default-features = false }
tokio-stream = "0.1.15"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
