[package]
name = "i3-auto-layout"
description = "Automatic, optimal tiling for i3wm"
version = "0.3.16"
authors = ["Pando85 <pando855@gmail.com>"]
edition = "2024"
homepage = "https://github.com/pando85/i3-auto-layout"
repository = "https://github.com/pando85/i3-auto-layout"
readme = "README.md"
license = "MIT"

[dependencies]
tokio-i3ipc = "0.16.0"
tokio = { version = "1.37", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0.83"
log = "0.4.21"
flexi_logger = { version = "0.30", default-features = false }
tokio-stream = "0.1.15"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[dev-dependencies.cargo-husky]
version = "1.5"
default-features = false  # Disable features which are enabled by default
features = ["user-hooks"]
