[package]
name = "i3-auto-layout"
description = "Automatic, optimal tiling for i3wm"
version = "0.4.4"
authors = ["Pando85 <pando855@gmail.com>"]
edition = "2024"
homepage = "https://github.com/pando85/i3-auto-layout"
repository = "https://github.com/pando85/i3-auto-layout"
readme = "README.md"
license = "MIT"

[dependencies]
tokio-i3ipc = "0.16.0"
tokio = { version = "1.37", default-features = false, features = ["macros", "sync"] }
anyhow = "1.0.83"
log = "0.4.21"
flexi_logger = { version = "0.31", default-features = false }
tokio-stream = "0.1.15"
swayipc-async = "2.1.0"
swayipc-types = "2.0.0"
async-trait = "0.1.88"
futures = "0.3.31"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
